fix: update text color in dark mode for improved readability

--- a/Vehicle/static/css/vehicle.css
+++ b/Vehicle/static/css/vehicle.css
@@ -47,7 +47,7 @@
     color: #000000d0;
   }
   .dark-mode .vehicle-info strong{
-    color: #000000d0;
+    color: #ccc;
   }
 
   .vehicle-info a{
