--- a/static/css/main.css
+++ b/static/css/main.css
@@ -204,7 +204,7 @@ body {
     top: -5px;
     right: -5px;
     background: red;
-    color: white;
+    color: #ccc;
     font-size: 12px;
     width: 18px;
     height: 18px;
